--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/TegnonAnalysis.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jtds-1.3.1.jar=C:\\Users\\chris.rowse\\jtds-1.3.1-dist\\jtds-1.3.1.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\scripts\\lib\\mysql-connector-java-5.1.39-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jtds-1.3.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tegnonanalysis.TegnonAnalysis
+main.class=tegnonanalysis.TegnonTransfer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
