--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,16 +24,18 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/TegnonAnalysis.jar
+dist.jar=${dist.dir}/TegnonTransfer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jtds-1.3.1.jar=C:\\Users\\chris.rowse\\jtds-1.3.1-dist\\jtds-1.3.1.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\scripts\\lib\\mysql-connector-java-5.1.39-bin.jar
+file.reference.sqljdbc42.jar=C:\\scripts\\lib\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jtds-1.3.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
